# hierophant

./: .dockerignore  .env.example  .env.maintainer  .gitignore  Cargo.toml  Dockerfile.contemplant  Dockerfile.hierophant  Makefile  README.md  contemplant.example.toml  docker-compose.run.yml  docker-compose.test.risc0.yml  docker-compose.test.sp1.yml  docker-compose.test.yml  docker-compose.yml  hierophant.example.toml
.github/workflows/: release.yml
circuits/: README.md
circuits/v5.0.0/groth16/: groth16.tar.gz.sha256
circuits/v5.0.0/plonk/: plonk.tar.gz.sha256
container/: contemplant-entrypoint.sh  sshd_config  supervisord.conf  vendor.sh
container/risc0-groth16-shim/: docker
contemplant/: Cargo.toml
contemplant/src/: config.rs  main.rs  message_handler.rs  worker_state.rs
contemplant/src/api/: connect_to_hierophant.rs  http.rs  mod.rs
contemplant/src/proof_executor/: assessor.rs  executor.rs  mod.rs
contemplant/src/proof_store/: command.rs  mod.rs
docker/: Dockerfile.contemplant  Dockerfile.hierophant  contemplant-entrypoint.sh  sshd_config  start-hierophant.sh  start-magister.sh  supervisord.conf
example/: .gitignore  Cargo.toml  request-proof.sh
example/contracts/src/fixtures/: groth16-fixture.json
hierophant/: .gitignore  Cargo.toml  README.md  contemplant.example.toml  hierophant.example.toml  old_testament.txt
hierophant/contemplant/: Cargo.toml
hierophant/contemplant/src/: assessor.rs  config.rs  connection.rs  main.rs  message_handler.rs  types.rs
hierophant/contemplant/src/proof_executor/: assessor.rs
hierophant/contemplant/src/proof_store/: client.rs  command.rs  store.rs
hierophant/hierophant/: Cargo.toml  build.rs
hierophant/hierophant/proto/: artifact.proto  network.proto
hierophant/hierophant/src/: artifact_store.rs  config.rs  create_artifact_service.rs  hierophant_state.rs  http_handler.rs  main.rs  program_store.rs  prover_network_service.rs  services.rs  ws_handler.rs
hierophant/hierophant/src/api/: http.rs  mod.rs  websocket.rs
hierophant/hierophant/src/api/grpc/: prover_network_service.rs
hierophant/hierophant/src/artifact_store/: artifact_uri.rs  client.rs  command.rs  store.rs
hierophant/hierophant/src/proof/: completed_proof_info.rs  router.rs
hierophant/hierophant/src/proof_router/: mod.rs  proof_cache.rs  proof_request_cache.rs  worker_registry.rs  worker_state.rs
hierophant/hierophant/src/worker_registry/: client.rs  command.rs  mod.rs  registry.rs  worker_state.rs
hierophant/network-lib/: Cargo.toml
hierophant/network-lib/src/: lib.rs
hierophant/src/: config.rs  hierophant_state.rs  main.rs
hierophant/src/api/: http.rs  websocket.rs
hierophant/src/api/grpc/: create_artifact_service.rs  mod.rs  prover_network_service.rs
hierophant/src/artifact_store/: command.rs  store.rs
hierophant/src/proof/: mod.rs  status.rs
hierophant/src/worker_registry/: registry.rs  worker_state.rs
hierophant_server/: Cargo.toml  build.rs
hierophant_server/proto/: hierophant.proto
hierophant_server/src/: http_handler.rs  main.rs  services.rs
integration-test/: Cargo.toml
integration-test/src/: main.rs
network-lib/src/: lib.rs  messages.rs  protocol.rs
provers/: README.md
provers/risc0/groth16-rzup/v0.1.0/: risc0-groth16.tar.xz.sha256
provers/risc0/v2025-04-03.1/: risc0-groth16-prover.tar.gz.sha256
provers/sp1/v5.0.0/: moongate-server.tar.gz.sha256
src/: names.txt
src/contemplant/: Cargo.toml
src/contemplant/src/: config.rs  main.rs  worker_state.rs
src/contemplant/src/api/: connect_to_hierophant.rs
src/contemplant/src/proof_executor/: assessor.rs  executor.rs  mod.rs  risc0_executor.rs  sp1_executor.rs
src/contemplant/src/proof_store/: client.rs  store.rs
src/hierophant/: Cargo.toml
src/hierophant/src/: config.rs  hierophant_state.rs  main.rs
src/hierophant/src/api/: http.rs
src/hierophant/src/api/grpc/: prover_network_service.rs
src/hierophant/src/artifact_store/: artifact_uri.rs  command.rs  mod.rs
src/hierophant/src/bonsai/: mod.rs  router.rs  state.rs  types.rs
src/hierophant/src/proof/: completed_proof_info.rs  router.rs
src/hierophant/src/worker_registry/: client.rs  command.rs  registry.rs  worker_state.rs
src/network-lib/: Cargo.toml
src/network-lib/src/: lib.rs  protocol.rs
src/sp1-fibonacci/: Dockerfile
src/sp1-fibonacci/script/: Cargo.toml
