[workspace]
members = ["hierophant", "contemplant", "network-lib"]
resolver = "2"

[workspace.package]
license = "AGPL-3.0-only"
authors = ["Joss Duff <jossduff.eth>", "Tim Clancy <tim-clancy.eth>"]
edition = "2024"

# Dependencies forked from https://github.com/succinctlabs/op-succinct tag v2.0.0
# Uncomment dependencies as needed
[workspace.dependencies]
sha2 = "0.10.8"
tokio-tungstenite = "0.24.0"
axum = { version = "0.7.9", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = [
	"sink",
	"std",
] }
toml = "0.8.20"
env_logger = "0.11.8"
# general
anyhow = { version = "1.0.86", default-features = false }
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.22"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
hex = "0.4.3"
bincode = "1.3.3"
base64 = "0.22.1"
tower-http = { version = "0.5.2", features = ["limit"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
alloy-primitives = { version = "1.0.0", default-features = false, features = [
	"sha3-keccak",
	"getrandom",
] }
sp1-sdk = { version = "5.0.0" }
