[package]
name = "contemplant"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
# homepage.workspace = true
# repository.workspace = true

[dependencies]
tokio.workspace = true
alloy-primitives = { workspace = true, features = ["getrandom"] }
reqwest.workspace = true
env_logger.workspace = true
lazy_static = "1.4"
rand = "0.9.1"
regex = "1"
futures-util.workspace = true
tokio-tungstenite.workspace = true
sp1-sdk.workspace = true
network-lib = { path = "../network-lib" }
toml.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
bincode.workspace = true
log.workspace = true
base64.workspace = true
tower-http.workspace = true
serde_repr = "0.1.19"
tempfile = "3.20.0"
tracing-appender = "0.2.3"
tracing-subscriber.workspace = true
tracing.workspace = true

# use `cargo build --features enable-native-gnark` when building a binary that uses undockerized cudaProver
[features]
enable-native-gnark = ["sp1-sdk/native-gnark"]
