[package]
name = "hierophant"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
# homepage.workspace = true
# repository.workspace = true

[dependencies]
network-lib = { path = "../network-lib" }
tonic = { version = "0.12.0", features = ["transport"] }
prost = "0.13.4"
hyper = { version = "0.14", features = ["full"] }
log.workspace = true
hex.workspace = true
sha2.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
toml.workspace = true
bincode.workspace = true
sp1-sdk.workspace = true
env_logger.workspace = true
reqwest.workspace = true
futures-util.workspace = true

[build-dependencies]
tonic-build = "0.10.0"
