[package]
name = "hierophant"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.10.0", features = ["transport"] }
prost = "0.12.0"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10.0"
