[package]
name = "contemplant"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
# homepage.workspace = true
# repository.workspace = true

[dependencies]
# workspace
tokio.workspace = true
alloy-primitives = { workspace = true, features = [
	"getrandom",
] } #alloy-primitives.workspace = true
reqwest.workspace = true


# local
# network-lib = { path = "../network-lib" }

# sp1
sp1-sdk.workspace = true

anyhow.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
# server
axum = { version = "0.7.4", features = ["macros"] }
bincode.workspace = true
log.workspace = true
base64.workspace = true
tower-http.workspace = true
serde_repr = "0.1.19"
