[package]
name = "hierophant"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
# homepage.workspace = true
# repository.workspace = true

[dependencies]
tonic = { version = "0.10.0", features = ["transport"] }
prost = "0.12.0"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
axum = "0.7.2"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.10.0"

# [dependencies]
# # workspace
# tokio.workspace = true
# alloy-primitives = { workspace = true, features = [
# 	"getrandom",
# ] } #alloy-primitives.workspace = true
#
#
# # local
# op-succinct-host-utils.workspace = true
# network-lib = { path = "../network-lib" }
#
# # sp1
# sp1-sdk.workspace = true
#
# anyhow.workspace = true
# dotenv.workspace = true
# op-succinct-client-utils.workspace = true
# serde.workspace = true
# serde_json.workspace = true
# csv.workspace = true
# # server
# axum = "0.7.4"
# bincode.workspace = true
# log.workspace = true
# base64.workspace = true
# tower-http.workspace = true
# serde_repr = "0.1.19"
