[package]
name = "hierophant"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
# homepage.workspace = true
# repository.workspace = true

[dependencies]
tonic = { version = "0.10.0", features = ["transport"] }
prost = "0.12.0"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
log.workspace = true
hex.workspace = true
anyhow.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
toml.workspace = true

[build-dependencies]
tonic-build = "0.10.0"
