[package]
name = "network-lib"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
alloy-primitives.workspace = true
sp1-sdk.workspace = true
sha2.workspace = true
anyhow.workspace = true
